# gnome-kra-ora-thumbnailer

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  gnome-kra-thumbnailer.c  gnome-kra-thumbnailer.thumbnailer.in  gnome-openraster-thumbnailer.c  gnome-openraster-thumbnailer.thumbnailer.in  gnome-thumbnailer-skeleton.c  gnome-thumbnailer-skeleton.h  kra-thumbnailer  kra.thumbnailer  openraster.thumbnailer  ora-thumbnailer
